# opencvhdfs

./: CMakeLists.txt  README.md  example.cpp
include/: opencvhdfs.h
src/: opencvhdfs.cpp
